<resources>
    <string name="app_name">Popular Movies</string>
    <string name="action_settings">Settings</string>
    <string name="movie_detail">Movie Detail</string>
    <string name="trailer">Trailers: </string>
    <string name="review">Reviews: </string>
    <string name="refresh">Refresh</string>
    <string name="trailer_list_item">Trailer</string>
    <string name="review_list_item">Review</string>
    <string name="no_review_available">No reviews</string>
    <string name="no_trailer_available">No trailers</string>
    <string name="favorite_movies">Favorite Movies</string>
    <string name="action_share">Share Movie</string>
    <string name="empty_gridview_favorite">No favorited movies. Favorite some movies and come back.</string>
    <string name="watch_share">Watch </string>
    <string name="empty_gridview_message">Choose a movie on the left</string>

    <string name="favorite">Favorite</string>
    <string name="unfavorite">Unfavorite</string>

    <string name="pref_sort_label">Sort by</string>
    <string name="pref_sort_key" translatable="false">sort</string>
    <string name="pref_popular" translatable="false">popular</string>
    <string name="pref_sort_default" translatable="false">popular</string>
    <string name="pref_top_rated" translatable="false">top_rated</string>
    <string name="pref_top_rated_label">Top Rated</string>
    <string name="pref_popular_label">Most Popular</string>

    <string name="empty_gridview">Oops! No movie posters available. You may be offline.</string>

    <string name="sync_account_type">popularmovies.android.maheshgaya.com</string>
    <string name="content_authority">com.maheshgaya.android.popularmovies.app</string>

    <string name="movies_notification">Movies updated</string>
</resources>
