<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.DetailActivity$DetailFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/item_icon_padding"
        android:orientation="vertical">
        <TextView
            android:id="@+id/detail_title_text_view"
            tools:text="test"
            android:elevation="@dimen/detail_title_elevation"
            android:textSize="@dimen/detail_title_text_size"
            android:paddingTop="@dimen/detail_title_vertical_padding"
            android:paddingBottom="@dimen/detail_title_vertical_padding"
            android:paddingLeft="@dimen/detail_title_horizontal_padding"
            android:paddingRight="@dimen/detail_title_horizontal_padding"
            android:textColor="@color/colorWhite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/item_icon_padding">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/detail_thumbnail_image_view"
                    tools:src="@drawable/ic_photo_placeholder"
                    android:layout_width="200dp"
                    android:layout_height="200dp" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">
                    <TextView
                        tools:text="test"
                        android:id="@+id/detail_release_date_text_view"
                        android:textSize="@dimen/detail_release_date_text_size"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        tools:text="test"
                        android:id="@+id/detail_ratings_text_view"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/detail_release_date_text_view"
                        android:layout_centerHorizontal="true" />

                    <Button
                        android:id="@+id/detail_favorite_button"
                        android:text="@string/favorite"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/detail_ratings_text_view"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="@dimen/item_icon_padding" />

                </RelativeLayout>

            </LinearLayout>
            <TextView
                android:id="@+id/detail_plot_text_view"
                android:layout_marginTop="@dimen/item_icon_padding"
                tools:text="test"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:paddingLeft="@dimen/item_icon_padding"
            android:paddingRight="@dimen/item_icon_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/trailer_title_text_view"
                android:text="@string/trailer"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorBlack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycleview_trailer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/empty_view_trailer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:visibility="gone"
                android:text="@string/no_trailer_available" />

            <TextView
                android:id="@+id/review_title_text_view"
                android:text="@string/review"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorBlack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycleview_review"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/empty_view_review"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:visibility="gone"
                android:text="@string/no_review_available" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>